lib_LTLIBRARIES = libmtkw.la

libmtkw_la_SOURCES = \
  profile.hpp \
  profiler.hpp \
  thread_local_storage.hpp \
  thread_local_manager.hpp \
  thread_local_manager.cpp \
  manager.hpp \
  manager.cpp \
  util.hpp
libmtkw_la_LIBADD =

libmtkw_la_SOURCES += \
  pthread_local_storage.hpp \
  pthread_local_storage.cpp
libmtkw_la_LIBADD += -lpthread
